Fixing for JDK 17